# simdna

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE  README.html  README.md  benchmark_output.txt  convert_benchmark_to_csv.py  justfile  plot_benchmarks.py
.github/: copilot-instructions.md
.github/workflows/: fuzz.yml  rust-ci.yml
artefacts/: benchmark_data_optimised.csv  benchmark_optimised.txt  benchmark_output_optimised.txt  benchmark_results.txt  benchmark_revcomp_optimised.txt
benchmark/: benchmark.rs
examples/: examples.rs  quality_validation.rs  roundtrip_seqio.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: bit_rotation.rs  boundaries.rs  decode_robust.rs  into_variants.rs  quality_roundtrip.rs  revcomp_boundaries.rs  reverse_complement.rs  roundtrip.rs  simd_scalar_equivalence.rs  valid_iupac.rs
outputs/: 2025-12-22T18-22-54_benchmark.csv  2025-12-22T18-22-54_benchmark.txt  2025-12-23T04-09-41_quality_benchmark.txt  2025-12-23T04-10-54_quality_benchmark.txt  2025-12-23T08-46-55_quality_encode_benchmark.txt  2025-12-23T14-29-51_quality_benchmark.txt  2025-12-23T15-01-29_quality_benchmark.txt  quality_benchmark_optimized.txt
scripts/: convert_benchmark_to_csv.py  fuzz-nightly.sh  fuzz-quick.sh  plot_benchmarks.py  plot_quality_benchmarks.py  run-benchmarks.sh
src/: dna_simd_encoder.rs  hybrid_encoder.rs  lib.rs  main.rs  quality_encoder.rs  serialization.rs  tetra_scanner.rs
